--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
-    "name": "getITfixed Computer Repair Avondale & Sun City",
-    "alternateName": "getITfixed - #1 Computer Repair in Avondale & Sun City",
-    "description": "Professional computer repair services in Avondale & Sun City, Arizona. Expert laptop repair, desktop PC repair, virus removal, data recovery, and tech support. Same-day service available.",
+    "name": "getITfixed Computer Repair Goodyear & Sun City",
+    "alternateName": "getITfixed - #1 Computer Repair in Goodyear & Sun City",
+    "description": "Professional computer repair services in Goodyear & Sun City, Arizona. Expert laptop repair, desktop PC repair, virus removal, data recovery, and tech support. Same-day service available.",
     "url": "https://getitfixedaz.com",
     "telephone": "+16237385630",
     "email": "info@getitfixed.com",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "Avondale & Sun City Areas",
-      "addressLocality": "Avondale",
+      "streetAddress": "Goodyear & Sun City Areas",
+      "addressLocality": "Goodyear",
       "addressRegion": "Arizona",
       "addressCountry": "US",
-      "postalCode": "85351"
+      "postalCode": "85338"
     },
     "geo": {
       "@type": "GeoCoordinates",
-      "latitude": "33.6137",
-      "longitude": "-112.2717"
+      "latitude": "33.4355",
+      "longitude": "-112.3576"
     },
     "areaServed": [
       {
         "@type": "City",
-        "name": "Avondale",
+        "name": "Goodyear",
         "addressRegion": "Arizona"
       },
       {
@@ -54,7 +54,7 @@
       },
       {
         "@type": "City",
-        "name": "Goodyear",
+        "name": "Avondale",
         "addressRegion": "Arizona"
       },
       {
@@ -72,8 +72,8 @@
       "@type": "GeoCircle",
       "geoMidpoint": {
         "@type": "GeoCoordinates",
-        "latitude": "33.6137",
-        "longitude": "-112.2717"
+        "latitude": "33.4355",
+        "longitude": "-112.3576"
       },
       "geoRadius": "50000"
     },
@@ -192,14 +192,14 @@
   {
     "@context": "https://schema.org",
     "@type": "Service",
-    "name": "Computer Repair Avondale & Sun City Areas",
+    "name": "Computer Repair Goodyear & Sun City Areas",
     "provider": {
       "@type": "LocalBusiness",
       "name": "getITfixed"
     },
     "areaServed": {
       "@type": "City",
-      "name": "Avondale & Sun City Areas", 
+      "name": "Goodyear & Sun City Areas", 
       "addressRegion": "Arizona"
     },
     "hasOfferCatalog": {
@@ -211,7 +211,7 @@
           "itemOffered": {
             "@type": "Service",
             "name": "Emergency Computer Repair Near Me",
-            "description": "Same-day computer repair service in Avondale & Sun City Arizona"
+            "description": "Same-day computer repair service in Goodyear & Sun City Arizona"
           }
         },
         {
@@ -219,7 +219,7 @@
           "itemOffered": {
             "@type": "Service", 
             "name": "Laptop Repair Near Me",
-            "description": "Professional laptop screen repair and hardware fixes in Avondale & Sun City"
+            "description": "Professional laptop screen repair and hardware fixes in Goodyear & Sun City"
           }
         },
         {
@@ -227,7 +227,7 @@
           "itemOffered": {
             "@type": "Service",
             "name": "PC Repair Near Me", 
-            "description": "Desktop computer repair and troubleshooting services Avondale & Sun City AZ"
+            "description": "Desktop computer repair and troubleshooting services Goodyear & Sun City AZ"
           }
         }
       ]
@@ -238,34 +238,34 @@
   <!-- Open Graph Tags -->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="business.business" />
-  <meta property="og:title" content="getITfixed - #1 Computer Repair in Avondale & Sun City | Professional PC & Laptop Repair Service Arizona" />
-  <meta property="og:description" content="getITfixed - #1 computer repair in Avondale & Sun City, Arizona. Professional computer repair, laptop repair, PC repair, virus removal, and data recovery services. Call (623) 738-5630 for immediate computer repair service!" />
+  <meta property="og:title" content="getITfixed - #1 Computer Repair in Goodyear & Sun City | Professional PC & Laptop Repair Service Arizona" />
+  <meta property="og:description" content="getITfixed - #1 computer repair in Goodyear & Sun City, Arizona. Professional computer repair, laptop repair, PC repair, virus removal, and data recovery services. Call (623) 738-5630 for immediate computer repair service!" />
   <meta property="og:url" content="https://getitfixedaz.com/" />
   <meta property="og:site_name" content="getITfixed Computer Repair" />
-  <meta property="business:contact_data:street_address" content="Avondale & Sun City Areas, AZ" />
-  <meta property="business:contact_data:locality" content="Avondale" />
+  <meta property="business:contact_data:street_address" content="Goodyear & Sun City Areas, AZ" />
+  <meta property="business:contact_data:locality" content="Goodyear" />
   <meta property="business:contact_data:region" content="Arizona" />
-  <meta property="business:contact_data:postal_code" content="85351" />
+  <meta property="business:contact_data:postal_code" content="85338" />
   <meta property="business:contact_data:country_name" content="United States" />
   <meta property="business:contact_data:phone_number" content="+16237385630" />
   
   <!-- Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="getITfixed - #1 Computer Repair in Avondale & Sun City | Professional PC & Laptop Repair Service Arizona" />
-  <meta name="twitter:description" content="getITfixed - #1 computer repair in Avondale & Sun City, Arizona. Professional computer repair, laptop repair, PC repair, virus removal, and data recovery services. Call (623) 738-5630 for immediate computer repair service!" />
+  <meta name="twitter:title" content="getITfixed - #1 Computer Repair in Goodyear & Sun City | Professional PC & Laptop Repair Service Arizona" />
+  <meta name="twitter:description" content="getITfixed - #1 computer repair in Goodyear & Sun City, Arizona. Professional computer repair, laptop repair, PC repair, virus removal, and data recovery services. Call (623) 738-5630 for immediate computer repair service!" />
   
-  <title>getITfixed - #1 Computer Repair in Avondale & Sun City | Professional PC & Laptop Repair Service Arizona</title>
+  <title>getITfixed - #1 Computer Repair in Goodyear & Sun City | Professional PC & Laptop Repair Service Arizona</title>
   
   <!-- ENHANCED SEO Meta Tags for Local Search -->
-  <meta name="description" content="getITfixed - #1 computer repair in Avondale & Sun City, Arizona. Professional computer repair, laptop repair, PC repair, virus removal, and data recovery services. Expert computer technicians serving Arizona. Call (623) 738-5630 for immediate computer repair service!">
+  <meta name="description" content="getITfixed - #1 computer repair in Goodyear & Sun City, Arizona. Professional computer repair, laptop repair, PC repair, virus removal, and data recovery services. Expert computer technicians serving Arizona. Call (623) 738-5630 for immediate computer repair service!">
   
-  <meta name="keywords" content="computer repair near me, computer repair Avondale, computer repair Sun City, laptop repair near me, PC repair, computer technician near me, computer repair service, laptop repair, desktop computer repair near me, computer repair shop, virus removal near me, data recovery, computer repair Arizona, same day computer repair, emergency computer repair near me, laptop screen repair, computer maintenance, gaming PC repair near me, computer upgrade service, malware removal, computer diagnostic, hard drive repair near me, computer network setup, SSD installation, memory upgrade, motherboard repair, computer optimization, tech support, broken computer repair, slow computer fix, computer won't start, blue screen repair, affordable computer repair near me, reliable computer repair, professional computer repair, #1 computer repair">
+  <meta name="keywords" content="computer repair near me, computer repair Goodyear, computer repair Sun City, laptop repair near me, PC repair, computer technician near me, computer repair service, laptop repair, desktop computer repair near me, computer repair shop, virus removal near me, data recovery, computer repair Arizona, same day computer repair, emergency computer repair near me, laptop screen repair, computer maintenance, gaming PC repair near me, computer upgrade service, malware removal, computer diagnostic, hard drive repair near me, computer network setup, SSD installation, memory upgrade, motherboard repair, computer optimization, tech support, broken computer repair, slow computer fix, computer won't start, blue screen repair, affordable computer repair near me, reliable computer repair, professional computer repair, #1 computer repair">
   
   <meta name="author" content="getITfixed Computer Repair">
   <meta name="geo.region" content="US-AZ">
-  <meta name="geo.placename" content="Avondale & Sun City Areas, Arizona">
-  <meta name="geo.position" content="33.6137;-112.2717">
-  <meta name="ICBM" content="33.6137, -112.2717">
+  <meta name="geo.placename" content="Goodyear & Sun City Areas, Arizona">
+  <meta name="geo.position" content="33.4355;-112.3576">
+  <meta name="ICBM" content="33.4355, -112.3576">
   
   <!-- Local SEO Tags -->
   <meta name="contact" content="(623) 738-5630" />
@@ -1422,7 +1422,7 @@
           <img src="images/getitfixed-logo.png" alt="getITfixed Computer Repair Logo" class="logo-image">
           getITfixed
         </div>
-        <div class="logo-tagline">#1 Computer Repair • Avondale & Sun City</div>
+        <div class="logo-tagline">#1 Computer Repair • Goodyear & Sun City</div>
       </div>
       <ul class="nav-links">
         <li><a href="#" class="active">Home</a></li>
@@ -1440,7 +1440,7 @@
     <div class="content-container">
       <!-- Main Title with Professional Branding -->
       <h1 class="main-title">getITfixed</h1>
-      <div class="professional-subtitle">#1 Computer Repair in Avondale & Sun City</div>
+      <div class="professional-subtitle">#1 Computer Repair in Goodyear & Sun City</div>
       <div class="local-tagline">Professional Computer Repair Services • Arizona</div>
       
       <!-- Free PC Safety Checklist -->
@@ -1777,7 +1777,7 @@
             📞 Call (623) 738-5630 for Computer Repair
           </p>
           <p style="color: #b8c5d1; margin-top: 0.5rem;">
-            Serving Avondale, Sun City, Sun City West, Goodyear, Peoria, Litchfield Park & Phoenix Metro
+            Serving Goodyear, Sun City, Sun City West, Avondale, Peoria, Litchfield Park & Phoenix Metro
           </p>
         </div>
         <div class="footer-section">
@@ -1814,7 +1814,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024 getITfixed - #1 Computer Repair in Avondale & Sun City | Same-Day PC Repair | Laptop Repair | Cable Management | Computer Technician Services | All rights reserved.</p>
+        <p>&copy; 2024 getITfixed - #1 Computer Repair in Goodyear & Sun City | Same-Day PC Repair | Laptop Repair | Cable Management | Computer Technician Services | All rights reserved.</p>
       </div>
     </div>
   </footer>
