--- a/services.html
+++ b/services.html
@@ -71,6 +71,10 @@
       margin-right: 0.8rem;
     }
 
+    .logo-highlight {
+      color: #7ED321;
+    }
+
     .nav-links {
       display: flex;
       list-style: none;
@@ -578,7 +582,7 @@
       <div class="logo">
         <div class="logo-main">
           <img src="images/getitfixed-logo.png" alt="getITfixed Computer Repair Logo" class="logo-image">
-          getITfixed
+          get<span class="logo-highlight">IT</span>fixed
         </div>
         <div class="logo-tagline">#1 Computer Repair • Goodyear & Sun City</div>
       </div>
