--- a/contact.html
+++ b/contact.html
@@ -886,7 +886,7 @@
               <div class="contact-icon">✉️</div>
               <div class="contact-details">
                 <h3>Email</h3>
-                <p><a href="mailto:info@getitfixed.com">info@getitfixed.com</a></p>
+                <p><a href="mailto:info@getitfixed.com">brighterarizonaled@gmail.com</a></p>
                 <p>We respond within 4 hours</p>
               </div>
             </div>
